[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Objects/PitController.gd" type="Script" id=1]

[node name="PitController" type="Area2D"]

position = Vector2( 1, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="TimerRespawn" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="TimerRespawn2" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="TimerStartMonitor" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="TimerRespawn" to="." method="_on_TimerRespawn_timeout"]

[connection signal="timeout" from="TimerRespawn2" to="." method="_on_TimerRespawn2_timeout"]

[connection signal="timeout" from="TimerStartMonitor" to="." method="_on_TimerStartMonitor_timeout"]


